k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps-demo-app
  labels:
    app.kubernetes.io/part-of: demo-app
    scope: apps
